Refactor battle mechanics to integrate Team class and enhance turn-based actions

--- a/res/data/langue.properties
+++ b/res/data/langue.properties
@@ -9,3 +9,8 @@ load_game=Load Game
 settings=Settings
 volume=Volume
 difficulty=Difficulty
+details=DETAILS
+crit=Critical hit!
+no_effect=It has no effect.
+no_very_eff=It ain't very effective.
+very_eff=It's super effective!
