--- a/res/data/langue_ger.properties
+++ b/res/data/langue_ger.properties
@@ -9,3 +9,7 @@ settings=Einstellungen
 volume=Volumen
 difficulty=Schwierigkeit
 details=DETAILS
+crit=Kritischer Treffer!
+no_effect=Es hat keine Wirkung.
+no_very_eff=Es ist nicht sehr effektiv.
+very_eff=Es ist super wirksam!
