Enhance game structure with new Start and Settings states, update player mechanics, and integrate language management
Added Start and Settings states for improved game navigation. Updated player mechanics for better movement and interaction. Revised language management for multilingual support. Included new assets and refactored existing code for clarity and maintainability.

--- a/res/data/langue_ger.properties
+++ b/res/data/langue_ger.properties
@@ -11,5 +11,5 @@ difficulty=Schwierigkeit
 details=DETAILS
 crit=Kritischer Treffer!
 no_effect=Es hat keine Wirkung.
-no_very_eff=Es ist nicht sehr effektiv.
+no_very_eff=Es ist nicht sehr effektiv..
 very_eff=Es ist super wirksam!
