--- a/res/data/langue.properties
+++ b/res/data/langue.properties
@@ -1,4 +1,4 @@
-# Contenu pour langue.properties (anglais - défaut)
+# Contenu pour langue.properties (anglais - dï¿½faut)
 langue=What language would you like to play in?
 start_game=Start Game
 options=Options
@@ -14,3 +14,15 @@ crit=Critical hit!
 no_effect=It has no effect.
 no_very_eff=It ain't very effective.
 very_eff=It's super effective!
+menu=Menu
+options=Options
+settings=Settings
+quit=Quit
+player_name=Pseudo
+save_game=Save Game
+load_game=Load Game
+volume=Volume
+difficulty=Difficulty
+details=DETAILS
+press_enter=Press Enter
+start=Start
