Implement performance settings and pause functionality
- Added new performance settings for target FPS in the settings menu.
- Introduced a pause state in the game, allowing players to pause and resume gameplay.
- Refactored Game class to manage the pause state and ensure proper game loop handling during pauses.
- Enhanced input handling to support pause interactions via keyboard and mouse.

--- a/res/data/save_config.json
+++ b/res/data/save_config.json
@@ -10,5 +10,6 @@
   "coyoteTimeFrames": 3,
   "apexGravityMultiplier": 0.3,
   "apexAccelerationMultiplier": 1.5,
+  "targetFPS": 240,
   "language": "en"
 }
